Task #28543 - DataTable redesign (added perfect-scrollbar + styles and js functionality). Fixed table header (scrolling together with content).

--- a/src/app.scss
+++ b/src/app.scss
@@ -177,10 +177,6 @@ $app-font-family: 'AvenirLTPro-Roman', sans-serif;
   min-height: 100vh;
 }
 
-.app-inner-main{
-  position: relative;
-}
-
 .App-footer{
 position: absolute;
   left: 50%;
